--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
-  <link rel="icon" href="/favicon.ico" sizes="any" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="icon" href="favicon.ico" sizes="any" />
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="site-header container">
@@ -52,23 +52,23 @@
         <a class="btn" href="#products">Shop the collection</a>
       </div>
       <picture>
-        <img src="/assets/images/hero.jpg" alt="Berryella skincare with botanicals" loading="lazy">
+        <img src="assets/images/hero.jpg" alt="Berryella skincare with botanicals" loading="lazy">
       </picture>
     </section>
 
     <section id="products" class="grid container">
       <article class="card">
-        <img src="/assets/images/product-1.jpg" alt="Botanical Radiance Serum" loading="lazy" />
+        <img src="assets/images/product-1.jpg" alt="Botanical Radiance Serum" loading="lazy" />
         <h3>Botanical Radiance Serum</h3>
         <p>Vitamin-rich serum for a dewy glow.</p>
       </article>
       <article class="card">
-        <img src="/assets/images/product-2.jpg" alt="Silk Dew Moisturizer" loading="lazy" />
+        <img src="assets/images/product-2.jpg" alt="Silk Dew Moisturizer" loading="lazy" />
         <h3>Silk Dew Moisturizer</h3>
         <p>Featherlight hydration with ceramides.</p>
       </article>
       <article class="card">
-        <img src="/assets/images/product-3.jpg" alt="Midnight Calm Mask" loading="lazy" />
+        <img src="assets/images/product-3.jpg" alt="Midnight Calm Mask" loading="lazy" />
         <h3>Midnight Calm Mask</h3>
         <p>Overnight mask for bouncy morning skin.</p>
       </article>
@@ -80,7 +80,7 @@
         <p>In the quiet heart of nature, beauty is born. We gather the gentlest botanicals and the purest actives to create indulgent routines that truly care for your skin.</p>
       </div>
       <div>
-        <img src="/assets/images/story.jpg" alt="Nature-inspired skincare ritual" loading="lazy" />
+        <img src="assets/images/story.jpg" alt="Nature-inspired skincare ritual" loading="lazy" />
       </div>
     </section>
 
@@ -109,8 +109,8 @@
     <div class="container small">
       <p>© <span id="y"></span> Berryella. All rights reserved.</p>
       <nav>
-        <a href="/privacy.html">Privacy</a>
-        <a href="/terms.html">Terms</a>
+        <a href="privacy.html">Privacy</a>
+        <a href="terms.html">Terms</a>
       </nav>
     </div>
   </footer>
